--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,6 +81,14 @@ style="border-width:0" /></a></noscript>
 </div>
 <!-- End GoStats JavaScript Based Code -->
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5995429082882788",
+    enable_page_level_ads: true
+  });
+</script>
+
 {% include google_search.js %}
 
 </head>
