--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,34 +40,21 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
 
-<!--
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?385d238b95fb1e2bd25f6510cc28b7a9";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-<noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
--->
-
-<!--
-Force using https.
--->
+<!-- Force using https. -->
 <script type="text/javascript">
     var host = "dbarobin.com";
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
 </script>
 
-<!--
-<div style="display:none">
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256776130'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256776130' type='text/javascript'%3E%3C/script%3E"));</script>
-	<noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
-</div>
--->
+<!-- Google Adsense. -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3101170268085793",
+    enable_page_level_ads: true
+  });
+</script>
 
 <!-- GoStats JavaScript Based Code -->
 <div style="display:none">
