--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,11 @@
   <link rel="stylesheet" type="text/css" href="https://dbarobin.com/assets/css/robin.css">
   <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
   <a href="https://twitter.com/{{site.twitter_username}}" title="Twitter ID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a> &nbsp;
+  <a href="https://facebook.com/dbarobin" title="Facebook ID: dbarobin" target="_blank"><i class="fa fa-facebook"></i></a> &nbsp;
+  <a href="https://steemit.com/@robinwen" title="Steemit ID: robinwen" target="_blank"><i class="fa fa-steemit"></i></a> &nbsp;
   <a href="https://github.com/{{site.github_username}}" title="Github ID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
   <a href="https://www.linkedin.com/in/dbarobin" title="LinkedIn ID: dbarobin" target="_blank"><i class="fa fa-linkedin"></i></a> &nbsp;
   <a href="https://www.instagram.com/vrwio" title="Instagram ID: vrwio" target="_blank"><i class="fa fa-instagram"></i></a> &nbsp;
-  <a href="https://steemit.com/@robinwen" title="Steemit ID: robinwen" target="_blank"><i class="fa fa-steemit"></i></a> &nbsp;
   <a href="https://dbarobin.com/feed.xml" title="RSS"><i class="fa fa-rss"></i></a>
   <p> &copy; 2017 Robin Wen. All Rights Reserved.</p>
    <div id="totop" class="mytotop">
