--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,6 @@
 
 <script type="text/javascript" defer="defer" src="https://dbarobin.com/assets/js/vendor/jquery-1.9.1.min.js"></script>
 <!-- Page view counter JS -->
-<script type="text/javascript" async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script type="text/javascript" defer="defer" src="https://dbarobin.com/assets/js/totop.js"></script>
 </footer>
