--- a/_includes/Aboutme.html
+++ b/_includes/Aboutme.html
@@ -12,8 +12,8 @@
   {% if site.email != empty %}
      <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
   {% endif %}
-  {% if site.github_username != empty %}
-     <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
+  {% if site.telegram_name != empty %}
+     <a href="https://t.me/{{site.telegram_name}}" title="Telegram: {{site.telegram_username}}" target="_blank"><i class="fa fa-telegram"></i></a> &nbsp;
   {% endif %}
   {% if site.twitter_username != empty %}
     <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a>
