--- a/_includes/Tags.html
+++ b/_includes/Tags.html
@@ -2,7 +2,7 @@
   <h4>{{ site.locales[site.default_locale].Tags }}</h4>
   {% for tag in site.tags %}
     {% if tag[1].size > 1 %}
-        <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a> &nbsp;
+        <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}<span class="size"> {{ tag[1].size }}</span></a> &nbsp;
     {% endif %}
   {% endfor %}
 </div>
