--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 <div class="col-sm-2">
 {% include Aboutme.html %}
+{% include Links.html %}
 {% include Lightning.html %}
 {% include Google_Search.html %}
 {% include Recent_Posts.html %}
