--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-sm-2">
 {% include Aboutme.html %}
 {% include Links.html %}
-{% include Lightning.html %}
+{% include Club.html %}
 {% include Google_Search.html %}
 {% include Recent_Posts.html %}
 {% include Categories.html %}
