--- a/_includes/Links.html
+++ b/_includes/Links.html
@@ -1,7 +1,7 @@
 <div class="sidebar-module">
     <h4>网站推荐</h4>
     <a href="https://www.binance.com/?ref=11190872" title="Binance，币安，强烈推荐的数字货币交易所" target="_blank">币安</a>
-    <a href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3" title="火币" target="_blank">火币</a>
+    <a href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3" title="火币，OTC 成交量最大的交易所" target="_blank">火币</a>
     <a href="https://www.vultr.com/?ref=8028399-4F" title="VPS 推荐" target="_blank">Vultr</a>
     <a href="http://www.captainbed.net/blog-robin" title="床长人工智能教程" target="_blank">人工智能教程</a>
 </div>
